--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "npm": "~9"
   },
   "dependencies": {
-    "@apollo/client": "3.8.2",
+    "@apollo/client": "3.8.10",
     "@reach/router": "1.3.4",
-    "@testing-library/user-event": "14.4.3",
-    "amazon-cognito-identity-js": "6.3.5",
+    "@testing-library/user-event": "14.5.2",
+    "amazon-cognito-identity-js": "6.3.7",
     "apollo-cache-inmemory": "1.6.6",
     "apollo3-cache-persist": "0.14.1",
     "atomize": "1.0.28",
@@ -34,70 +34,71 @@
     "aws-appsync-auth-link": "3.0.7",
     "aws-appsync-react": "4.0.15",
     "aws-appsync-subscription-link": "3.1.2",
-    "aws-sdk": "2.1450.0",
-    "axios": "1.5.0",
-    "codeceptjs": "3.5.4",
-    "gatsby": "5.12.3",
+    "aws-sdk": "2.1539.0",
+    "axios": "1.6.5",
+    "codeceptjs": "3.5.11",
+    "gatsby": "5.13.1",
     "gatsby-plugin-google-fonts-v2": "1.0.1",
-    "gatsby-plugin-google-gtag": "5.12.0",
-    "gatsby-plugin-image": "3.12.0",
-    "gatsby-plugin-manifest": "5.12.0",
-    "gatsby-plugin-nprogress": "5.12.0",
+    "gatsby-plugin-google-gtag": "5.13.0",
+    "gatsby-plugin-image": "3.13.0",
+    "gatsby-plugin-manifest": "5.13.0",
+    "gatsby-plugin-nprogress": "5.13.0",
     "gatsby-plugin-react-i18next": "3.0.1",
     "gatsby-plugin-s3": "0.4.1",
-    "gatsby-plugin-sass": "6.12.0",
-    "gatsby-plugin-sharp": "5.12.0",
-    "gatsby-plugin-sitemap": "6.12.0",
-    "gatsby-plugin-styletron": "8.12.0",
-    "gatsby-source-filesystem": "5.12.0",
-    "gatsby-transformer-sharp": "5.12.0",
-    "i18next": "23.4.6",
+    "gatsby-plugin-sass": "6.13.0",
+    "gatsby-plugin-sharp": "5.13.0",
+    "gatsby-plugin-sitemap": "6.13.0",
+    "gatsby-plugin-styletron": "8.13.0",
+    "gatsby-source-filesystem": "5.13.0",
+    "gatsby-transformer-sharp": "5.13.0",
+    "i18next": "23.7.16",
     "immutability-helper": "3.1.1",
-    "puppeteer": "21.1.1",
+    "npm-check-updates": "^16.14.12",
+    "puppeteer": "21.7.0",
     "react": "18.2.0",
     "react-apollo": "3.1.5",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
-    "react-i18next": "13.2.2",
-    "react-redux": "8.1.2",
+    "react-i18next": "14.0.0",
+    "react-redux": "9.1.0",
     "react-transition-group": "4.4.5",
-    "redux": "4.2.1",
+    "redux": "5.0.1",
     "redux-devtools-extension": "2.13.9",
     "redux-observable": "2.0.0",
     "rxjs": "7.8.1",
-    "sass": "1.66.1",
-    "styletron-engine-atomic": "1.5.0",
-    "styletron-react": "6.1.0",
+    "sass": "1.70.0",
+    "styletron-engine-atomic": "1.6.2",
+    "styletron-react": "6.1.1",
     "util": "0.12.5",
-    "uuid": "9.0.0",
+    "uuid": "9.0.1",
     "webpack-filter-warnings-plugin": "1.2.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "@testing-library/jest-dom": "6.1.2",
-    "@testing-library/react": "14.0.0",
-    "@types/jest": "29.5.4",
-    "@types/react": "18.2.21",
-    "@types/react-helmet": "6.1.6",
-    "@types/react-test-renderer": "18.0.1",
-    "babel-jest": "29.6.4",
-    "babel-preset-gatsby": "3.12.0",
+    "@testing-library/jest-dom": "6.2.0",
+    "@testing-library/react": "14.1.2",
+    "@types/jest": "29.5.11",
+    "@types/react": "18.2.48",
+    "@types/react-helmet": "6.1.11",
+    "@types/react-test-renderer": "18.0.7",
+    "babel-jest": "29.7.0",
+    "babel-preset-gatsby": "3.13.0",
     "cheerio": "1.0.0-rc.12",
     "dotenv": "16.3.1",
-    "glob": "10.3.4",
+    "glob": "10.3.10",
     "identity-obj-proxy": "3.0.0",
-    "jest": "29.6.4",
-    "jest-environment-jsdom": "29.6.4",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-fetch-mock": "3.0.3",
     "jest-junit": "16.0.0",
-    "jsdom": "22.1.0",
+    "jsdom": "23.2.0",
     "jsdom-global": "3.0.2",
-    "prettier": "3.0.3",
+    "prettier": "3.2.4",
     "react-test-renderer": "18.2.0",
     "redux-mock-store": "1.5.4",
-    "replace-in-file": "7.0.1",
-    "ts-node": "10.9.1",
-    "typescript": "5.2.2"
+    "replace-in-file": "7.1.0",
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3"
   }
 }
