--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "aws-sdk": "2.1539.0",
     "axios": "1.6.5",
     "codeceptjs": "3.5.11",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.33.2",
     "gatsby": "5.13.1",
     "gatsby-plugin-google-fonts-v2": "1.0.1",
     "gatsby-plugin-google-gtag": "5.13.0",
@@ -94,7 +98,7 @@
     "jest-junit": "16.0.0",
     "jsdom": "23.2.0",
     "jsdom-global": "3.0.2",
-    "prettier": "3.2.4",
+    "prettier": "^3.2.4",
     "react-test-renderer": "18.2.0",
     "redux-mock-store": "1.5.4",
     "replace-in-file": "7.1.0",
