--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "gatsby-transformer-sharp": "5.13.0",
     "i18next": "23.7.16",
     "immutability-helper": "3.1.1",
+    "jest-dom": "^4.0.0",
     "npm-check-updates": "^16.14.12",
     "puppeteer": "21.7.0",
     "react": "18.2.0",
