--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "resolveJsonModule": true
   },
   "exclude": ["node_modules"],
-  "include": ["src", "src/declaration.d.ts"]
+  "include": ["src", "src/declaration.d.ts", "custom.d.ts"]
 }
