--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "types": ["jest", "node"],
     "declaration": true,
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noUnusedLocals": true
   },
   "exclude": ["node_modules"],
   "include": ["src", "src/declaration.d.ts"]
