chore: install SCSS styling packages

--- a/package.json
+++ b/package.json
@@ -103,6 +103,10 @@
     "react-test-renderer": "18.2.0",
     "redux-mock-store": "1.5.4",
     "replace-in-file": "7.1.0",
+    "stylelint": "^16.2.1",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-config-standard-scss": "^13.0.0",
+    "stylelint-scss": "^6.1.0",
     "ts-node": "10.9.2",
     "typescript": "5.3.3"
   }
