chore: add lint command with eslint & stylelint

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "deploy": "gatsby-plugin-s3 deploy -y",
     "dev": "gatsby develop --host=0.0.0.0",
     "prepare-env": "node ./prepare-env.js",
-    "test": "npm run clean:test && jest src/** --coverage"
+    "test": "npm run clean:test && jest src/** --coverage",
+    "lint": "eslint --fix --ext .js,.ts,.jsx,.tsx,.html ./src && stylelint \"src/**/*.scss\" --fix"
   },
   "engines": {
     "node": "~18",
