--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.8.10",
+    "@mancho.devs/cognito": "^2.2.0",
     "@reach/router": "1.3.4",
     "@testing-library/user-event": "14.5.2",
     "amazon-cognito-identity-js": "6.3.7",
