chore: . set cognito parameters for prod environment

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
-GATSBY_REGION=
-GATSBY_SITE_DOMAIN=
+GATSBY_COGNITO_CLIENT_ID=7nm1627efll9vkbn9dnqhimp4g
+GATSBY_COGNITO_USER_POOL_ID=us-west-2_Vks7GkhlO
+GATSBY_REGION=us-west-2
