--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mancho.devs/cognito": "^2.2.0",
     "@reach/router": "1.3.4",
     "@testing-library/user-event": "14.5.2",
+    "@types/leaflet": "1.9.9",
     "amazon-cognito-identity-js": "6.3.7",
     "apollo-cache-inmemory": "1.6.6",
     "apollo3-cache-persist": "0.14.1",
@@ -60,6 +61,7 @@
     "i18next": "23.7.16",
     "immutability-helper": "3.1.1",
     "jest-dom": "^4.0.0",
+    "leaflet": "1.9.4",
     "npm-check-updates": "^16.14.12",
     "puppeteer": "21.7.0",
     "react": "18.2.0",
@@ -67,6 +69,7 @@
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
     "react-i18next": "14.0.0",
+    "react-leaflet": "4.2.1",
     "react-redux": "9.1.0",
     "react-transition-group": "4.4.5",
     "redux": "5.0.1",
