--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gatsby-plugin-manifest": "5.13.0",
     "gatsby-plugin-nprogress": "5.13.0",
     "gatsby-plugin-react-i18next": "3.0.1",
+    "gatsby-plugin-react-leaflet": "^4.0.3",
     "gatsby-plugin-s3": "0.4.1",
     "gatsby-plugin-sass": "6.13.0",
     "gatsby-plugin-sharp": "5.13.0",
