--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.8.10",
-    "@mancho.devs/cognito": "^2.2.0",
+    "@mancho.devs/cognito": "file:mancho.devs-cognito-2.3.0.tgz",
     "@reach/router": "1.3.4",
     "@testing-library/user-event": "14.5.2",
     "@types/leaflet": "1.9.9",
