--- a/package.json
+++ b/package.json
@@ -28,37 +28,37 @@
     "@mancho.devs/cognito": "file:mancho.devs-cognito-2.3.0.tgz",
     "@reach/router": "1.3.4",
     "@testing-library/user-event": "14.5.2",
-    "@types/leaflet": "1.9.9",
-    "amazon-cognito-identity-js": "6.3.7",
+    "@types/leaflet": "1.9.14",
+    "amazon-cognito-identity-js": "6.3.12",
     "apollo-cache-inmemory": "1.6.6",
     "apollo3-cache-persist": "0.14.1",
     "atomize": "1.0.28",
-    "aws-appsync": "4.1.9",
+    "aws-appsync": "4.1.10",
     "aws-appsync-auth-link": "3.0.7",
-    "aws-appsync-react": "4.0.15",
-    "aws-appsync-subscription-link": "3.1.2",
+    "aws-appsync-react": "4.0.16",
+    "aws-appsync-subscription-link": "3.1.3",
     "aws-sdk": "2.1539.0",
-    "axios": "1.7.4",
+    "axios": "1.7.7",
     "codeceptjs": "3.5.11",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
-    "gatsby": "5.13.1",
+    "gatsby": "5.13.7",
     "gatsby-plugin-google-fonts-v2": "1.0.1",
-    "gatsby-plugin-google-gtag": "5.13.0",
-    "gatsby-plugin-image": "3.13.0",
-    "gatsby-plugin-manifest": "5.13.0",
-    "gatsby-plugin-nprogress": "5.13.0",
+    "gatsby-plugin-google-gtag": "5.13.1",
+    "gatsby-plugin-image": "3.13.1",
+    "gatsby-plugin-manifest": "5.13.1",
+    "gatsby-plugin-nprogress": "5.13.1",
     "gatsby-plugin-react-i18next": "3.0.1",
     "gatsby-plugin-react-leaflet": "^4.0.3",
     "gatsby-plugin-s3": "0.4.1",
-    "gatsby-plugin-sass": "6.13.0",
-    "gatsby-plugin-sharp": "5.13.0",
-    "gatsby-plugin-sitemap": "6.13.0",
-    "gatsby-plugin-styletron": "8.13.0",
-    "gatsby-source-filesystem": "5.13.0",
-    "gatsby-transformer-sharp": "5.13.0",
+    "gatsby-plugin-sass": "6.13.1",
+    "gatsby-plugin-sharp": "5.13.1",
+    "gatsby-plugin-sitemap": "6.13.1",
+    "gatsby-plugin-styletron": "8.13.1",
+    "gatsby-source-filesystem": "5.13.1",
+    "gatsby-transformer-sharp": "5.13.1",
     "i18next": "23.7.16",
     "immutability-helper": "3.1.1",
     "jest-dom": "^4.0.0",
@@ -71,7 +71,7 @@
     "react-helmet": "6.1.0",
     "react-i18next": "14.0.0",
     "react-leaflet": "4.2.1",
-    "react-redux": "9.1.0",
+    "react-redux": "9.1.2",
     "react-transition-group": "4.4.5",
     "redux": "5.0.1",
     "redux-devtools-extension": "2.13.9",
@@ -89,14 +89,14 @@
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@testing-library/jest-dom": "6.2.0",
     "@testing-library/react": "14.1.2",
-    "@types/jest": "29.5.11",
+    "@types/jest": "29.5.14",
     "@types/react": "18.2.48",
     "@types/react-helmet": "6.1.11",
     "@types/react-test-renderer": "18.0.7",
     "ajv": "^7.2.4",
     "babel-jest": "29.7.0",
-    "babel-preset-gatsby": "3.13.0",
-    "cheerio": "1.0.0-rc.12",
+    "babel-preset-gatsby": "3.13.2",
+    "cheerio": "1.0.0",
     "dotenv": "16.3.1",
     "glob": "10.3.10",
     "identity-obj-proxy": "3.0.0",
@@ -108,7 +108,7 @@
     "jsdom-global": "3.0.2",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
-    "redux-mock-store": "1.5.4",
+    "redux-mock-store": "1.5.5",
     "replace-in-file": "7.1.0",
     "stylelint": "^16.10.0",
     "stylelint-config-standard": "^36.0.1",
