fix: ! add GATSBY_ prefix to env variables

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
-GATSBY_COGNITO_CLIENT_ID=7nm1627efll9vkbn9dnqhimp4g
-GATSBY_COGNITO_USER_POOL_ID=us-west-2_Vks7GkhlO
-GATSBY_REGION=us-west-2
+GATSBY_COGNITO_CLIENT_ID=
+GATSBY_COGNITO_USER_POOL_ID=
+GATSBY_REGION=
+GATSBY_APPSYNC_ENDPOINT=
+GATSBY_X_API_KEY=
