chore: add new gatsby vars

--- a/.env.production
+++ b/.env.production
@@ -3,3 +3,5 @@ GATSBY_COGNITO_USER_POOL_ID=
 GATSBY_REGION=
 GATSBY_APPSYNC_ENDPOINT=
 GATSBY_X_API_KEY=
+GATSBY_COGNITO_IDENTITY_POOL_ID=
+GATSBY_SITE_DOMAIN=
