--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "axios": "1.7.7",
     "codeceptjs": "3.6.7",
     "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "^7.37.2",
     "gatsby": "5.13.7",
     "gatsby-plugin-google-fonts-v2": "1.0.1",
@@ -91,6 +91,7 @@
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "14.1.2",
     "@types/jest": "29.5.14",
+    "@types/prettier": "^2.7.3",
     "@types/react": "18.3.12",
     "@types/react-helmet": "6.1.11",
     "@types/react-test-renderer": "18.3.0",
@@ -107,7 +108,7 @@
     "jest-junit": "16.0.0",
     "jsdom": "23.2.0",
     "jsdom-global": "3.0.2",
-    "prettier": "^3.3.3",
+    "prettier": "2.8.8",
     "react-test-renderer": "18.3.1",
     "redux-mock-store": "1.5.5",
     "replace-in-file": "7.1.0",
