--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "redux": "5.0.1",
     "redux-devtools-extension": "2.13.9",
     "redux-observable": "2.0.0",
+    "redux-thunk": "^3.1.0",
     "rxjs": "7.8.1",
     "sass": "1.80.6",
     "styletron-engine-atomic": "1.6.2",
